welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:4: error: recursive variable n needs type
	if (num+2==10*n || num-2==10*n)
                      ^nearTen:10: error: type mismatch;
 found   : Unit
 required: Boolean
}
^